[package]
name = "crowbook"
version = "0.17.0"
edition = "2021"
authors = ["Elisabeth Henry <liz.henry@ouvaton.org>"]
description = "Render a Markdown book in HTML, PDF or Epub"
repository = "https://github.com/lise-henry/crowbook"
documentation = "https://docs.rs/crowbook/"
readme = "README.md"
keywords = ["markdown", "book"]
categories = ["command-line-utilities", "text-processing"]
license = "LGPL-2.1+"
publish = true
autobins = false
rust-version = "1.58" 

exclude = [
    "docs/*",
    "/img/*",
    "ci/*",
    ".travis.yml",
    "appveyor.yml",
]

[badges]
travis-ci = { repository = "lise-henry/crowbook" }
appveyor = { repository = "lise-henry/crowbook" }

[lib]
name = "crowbook"
path = "src/lib/lib.rs"
doctest = false

[[bin]]
name = "crowbook"
path = "src/bin/main.rs"
doc = false

[features]
default = ["binary", "syntect"]
binary = ["clap", "simplelog", "tempfile", "console", "indicatif", "textwrap"]
nightly = ["punkt", "hyphenation"]

[dependencies]
rust-i18n = "2"
html-escape = "0.2"
mime_guess = "2"
comrak = "0.18"
yaml-rust = "0.4"
upon = "0.7"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
base64 = "0.21"
rayon = "1.6"
crowbook-text-processing = "^1.1.1"
lazy_static = "1"
numerals = "0.1"
epub-builder = "^0.7.1"
log = "0.4"
punkt = { version = "1.0", optional = true }
hyphenation = { version = "0.8", optional = true, features = ["embed_all"] }
textwrap = { version = "0.16", optional = true }
indicatif = { version = "0.17", optional = true }
console = { version = "0.15", optional = true }
clap = { version = "4", optional = true }
simplelog = { version = "0.12", optional = true }
syntect = { version = "5", optional = true }
tempfile = { version = "3", optional = true }
